[gd_scene load_steps=2 format=3 uid="uid://mainmenu001"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.18, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -140.0
offset_right = 150.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.941, 0.784, 0.314, 1)
theme_override_font_sizes/font_size = 42
text = "LOOP DRIFT RACER"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="NewRunButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(200, 45)
text = "New Run"

[node name="SettingsButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(200, 45)
text = "Settings"

[node name="ExitButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(200, 45)
text = "Exit"

[node name="SettingsPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
visible = false

[node name="SettingsVBox" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SettingsTitle" type="Label" parent="SettingsPanel/SettingsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.941, 0.784, 0.314, 1)
theme_override_font_sizes/font_size = 24
text = "SETTINGS"
horizontal_alignment = 1

[node name="MasterRow" type="HBoxContainer" parent="SettingsPanel/SettingsVBox"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="SettingsPanel/SettingsVBox/MasterRow"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
theme_override_font_sizes/font_size = 14
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="SettingsPanel/SettingsVBox/MasterRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="SfxRow" type="HBoxContainer" parent="SettingsPanel/SettingsVBox"]
layout_mode = 2

[node name="SfxLabel" type="Label" parent="SettingsPanel/SettingsVBox/SfxRow"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
theme_override_font_sizes/font_size = 14
text = "SFX Volume"

[node name="SfxSlider" type="HSlider" parent="SettingsPanel/SettingsVBox/SfxRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicRow" type="HBoxContainer" parent="SettingsPanel/SettingsVBox"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="SettingsPanel/SettingsVBox/MusicRow"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
theme_override_font_sizes/font_size = 14
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="SettingsPanel/SettingsVBox/MusicRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="DeadzoneRow" type="HBoxContainer" parent="SettingsPanel/SettingsVBox"]
layout_mode = 2

[node name="DeadzoneLabel" type="Label" parent="SettingsPanel/SettingsVBox/DeadzoneRow"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
theme_override_font_sizes/font_size = 14
text = "Deadzone"

[node name="DeadzoneSlider" type="HSlider" parent="SettingsPanel/SettingsVBox/DeadzoneRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.05
max_value = 0.4
step = 0.01
value = 0.15

[node name="ZoomRow" type="HBoxContainer" parent="SettingsPanel/SettingsVBox"]
layout_mode = 2

[node name="ZoomLabel" type="Label" parent="SettingsPanel/SettingsVBox/ZoomRow"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
theme_override_font_sizes/font_size = 14
text = "Camera Zoom"

[node name="ZoomSlider" type="HSlider" parent="SettingsPanel/SettingsVBox/ZoomRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -0.05
max_value = 0.05
step = 0.005
value = 0.0

[node name="ButtonRow" type="HBoxContainer" parent="SettingsPanel/SettingsVBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 15

[node name="ResetButton" type="Button" parent="SettingsPanel/SettingsVBox/ButtonRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 35)
text = "Reset Defaults"

[node name="CloseButton" type="Button" parent="SettingsPanel/SettingsVBox/ButtonRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 35)
text = "Close"
